--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ django-rest-auth==0.9.5
 djangorestframework==3.11.0
 pytz==2019.3
 
-dj-database-url-0.5.0
-django-heroku-0.3.1
-psycopg2-2.8.5
+dj-database-url==0.5.0
+django-heroku==0.3.1
+psycopg2==2.8.5
 gunicorn ==19.7.1
 whitenoise==5.1.0
