removed build script from package.json

--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "postinstall": "cd frontend && npm install",
     "start": "react-scripts start",
     "test-react": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "webpack --mode development ./frontend/src/index.js --output ./frontend/static/frontend/main.js",
-    "build": "webpack --mode production ./frontend/src/index.js --output ./frontend/static/frontend/main.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
