--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/date-fns": "^2.6.0",
+    "date-fns": "^2.14.0",
     "fontsource-roboto": "^2.1.3",
     "material-ui-search-bar": "^1.0.0-beta.14",
     "perfect-scrollbar-react": "^1.0.1",
